--- a/css/style.css
+++ b/css/style.css
@@ -381,15 +381,34 @@ ul {
   border: 1px solid #eEEEEE;
   background-color: #FFFFFF;
   box-sizing: border-box;
+  
 
 }
-.portfolioimg:hover {
+.portfolioimg:hover .overlay {
+  transform: translateX(0);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+
 }
 .portfolioimg:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+}
+.overlay-box{
+  position: relative;
+  overflow: hidden;
+}
+.overlay{
+  background-color: 
+  rgba(33, 150, 243, 0.9)
+   ;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  transform: translateX(-100%);
+  transition: transform 250ms ease;
 }
 .fit{
   margin: 0;
