--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,8 @@
   --spirt-color: #afb1b8;
   --active-color: #2196f3;
   --headerborder-color: #ECECEC;
+  --overlay-color: 
+  rgba(255, 255, 255, 1);
 }
 body {
   color: var(--body-color);
@@ -29,12 +31,14 @@ ul {
   display: flex;
   text-align: center;
   align-items: baseline;
+  height: 80px;
 }
 .headerportfolio{
   display: flex;
   text-align: center;
   align-items: baseline;
   border-bottom: 1px solid var(--headerborder-color);
+  height: 80px;
 }
 .name {
   text-decoration: none;
@@ -53,19 +57,110 @@ ul {
   gap: 46px;
   padding-left: 93px;
 }
-.item {
+
+.unactive{
+  position: relative;
   font-weight: 500;
   text-decoration: none;
   font-size: 14px;
   line-height: 1.14;
   color: var(--menu-color);
   cursor: pointer;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.item:hover {
+.unactive:hover{
   color: var(--active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.item:focus {
+.unactive:focus{
   color: var(--active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-agencja{
+  position: relative;
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 1.14;
+  color: var(--menu-color);
+  cursor: pointer;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-agencja:hover{
+  color: var(--active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-agencja:focus{
+  color: var(--active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-agencja::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--active-color);
+  bottom: -32px;
+  left: 0px;
+}
+.header-portfolio{
+  position: relative;
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 1.14;
+  color: var(--menu-color);
+  cursor: pointer;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-portfolio:hover{
+  color: var(--active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-portfolio:focus{
+  color: var(--active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-portfolio::after{
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 4px;
+  border-radius: 2px;
+  background-color: var(--active-color);
+  bottom: -32px;
+  left: 0px;
+}
+.header-kontakt{
+  position: relative;
+  font-weight: 500;
+  text-decoration: none;
+  font-size: 14px;
+  line-height: 1.14;
+  color: var(--menu-color);
+  cursor: pointer;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-kontakt:hover{
+  color: var(--active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.header-kontakt:focus{
+  color: var(--active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .headercontact {
   display: inline-flex;
@@ -83,6 +178,8 @@ ul {
   font-size: 14px;
   line-height: 1.14;
   cursor: pointer;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact-icon{
   fill: currentColor;
@@ -90,9 +187,13 @@ ul {
 }
 .contact:hover {
   color: var(--active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .contact:focus {
   color: var(--active-color);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 /* Heder i ogólne body */
 .main {
@@ -178,6 +279,33 @@ ul {
   gap: 30px;
   flex-basis: calc((100% - 60px) / 3);
 }
+.grey-box{
+  position: relative;
+  width: 370px;
+  height: 270px;
+  overflow: visible;
+}
+.grey-text{
+  position: absolute;
+width: 370px;
+height: 70px;
+background-color: rgba(47, 48, 58, 0.8);
+bottom: -9%;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.grey-text>p{
+  color:#FFFFFF;
+  font-family: 'Roboto';
+font-style: normal;
+font-weight: 700;
+font-size: 14px;
+line-height: 16px;
+text-align: center;
+letter-spacing: 0.03em;
+text-transform: uppercase;
+}
 .team {
   background-color: var(--team-color);
   padding-bottom: 94px;
@@ -236,16 +364,22 @@ ul {
 .social {
   background-color: #ffffff;
   fill: #afb1b8;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social:hover {
   background-color: #2196f3;
   border-radius: 50%;
   fill: #ffffff;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social:focus {
   background-color: #2196f3;
   border-radius: 50%;
   fill: #ffffff;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .our-clients {
   text-align: center;
@@ -264,14 +398,20 @@ ul {
   border-radius: 4px;
   border: 1px solid rgba(175, 177, 184, 1);
   border-radius: 4px;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo:hover {
   fill: #2196f3;
   border-color: #2196f3;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo:focus {
   fill: #2196f3;
   border-color: #2196f3;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Początek footera */
@@ -292,26 +432,38 @@ ul {
   font-size: 26px;
   line-height: 1.19;
   cursor: pointer;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .namefotter:hover {
   color: #2196f3;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .namefotter:focus {
   color: #2196f3;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .location {
   color: #ffffff;
   font-size: 14px;
   line-height: 1, 71;
   cursor: pointer;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .location:hover {
   color: #2196f3;
   cursor: pointer;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .location:focus {
   color: #2196f3;
   cursor: pointer;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .joinus {
   font-family: 'Roboto', sans-serif;
@@ -324,14 +476,20 @@ ul {
   background-color: rgba(255, 255, 255, 0.1);
   border-radius: 50%;
   fill: #ffffff;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-fotter:hover {
   background-color: #2196f3;
   border-radius: 50%;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .social-fotter:focus {
   background-color: #2196f3;
   border-radius: 50%;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /* Tu kończy się css dla strony głównej */
@@ -351,6 +509,8 @@ ul {
   border: none;
   background-color: var(--team-color);
   border-radius: 4px;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filtr:hover {
   background-color: #2196f3;
@@ -358,6 +518,8 @@ ul {
   border-radius: 4px;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .filtr:focus {
   background-color: #2196f3;
@@ -365,6 +527,8 @@ ul {
   border-radius: 4px;
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
     0px 2px 2px rgba(0, 0, 0, 0.12);
+    transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .img {
   padding-top: 50px;
@@ -381,24 +545,45 @@ ul {
   border: 1px solid #eEEEEE;
   background-color: #FFFFFF;
   box-sizing: border-box;
-  
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
-.portfolioimg:hover .overlay {
-  transform: translateX(0);
+.portfolioimg:hover {
+  cursor: pointer;
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
-
+    transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolioimg:hover .overlay{
+  transform: translateY(0);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolioimg:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
+    transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.portfolioimg:focus .overlay{
+  transform: translateY(0);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .overlay-box{
   position: relative;
   overflow: hidden;
 }
 .overlay{
+  color: var(--overlay-color);
+  font-size: 18px;
+  line-height: 1,55;
+  margin: 0 auto;
+  display: flex;
+  text-align: center;
+  align-items: center;
   background-color: 
   rgba(33, 150, 243, 0.9)
    ;
@@ -407,8 +592,9 @@ ul {
   left: 0;
   width: 100%;
   height: 100%;
-  transform: translateX(-100%);
-  transition: transform 250ms ease;
+  transform: translateY(101%);
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 .fit{
   margin: 0;
@@ -431,4 +617,38 @@ ul {
 .container {
   width: 1200px;
   margin: 0 auto;
+}
+/* JS */
+.backdrop{
+  position: fixed;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+}
+.modal{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  width: 528px;
+  min-height: 581px;
+  background-color:#FFFFFF ;
+}
+.close-btn{
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  width: 30px;
+  height: 30px;
+  background-color: #FFFFFF;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+}
+.is-hidden{
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
 }
